@@ -8,6 +8,7 @@ Update hierarchy filter
 Fix data_quality css
 Fix about_data link
 Fix FAQ sequence
+Display location pos link regardless of @srsName
 
 
 Development Portal (2020-06-05 shi)
